# Carboxygenator-simulator

./: .gitignore  AGENTS.md  CHANGELOG.md  Development History of the Carboxygenator Technology.docx  Gas Permeability of Saint‑Gobain Sani‑Tech Ultra Silicone Tubing and Best-Available Measured Analog .docx  Pressure Testing.pptx  README.md  clausereview.md  deep-research-report.md  developmentplan.md  pyproject.toml  start_app.bat  streamlit_app.py
core/: __init__.py  model.py  params.py  results.py  solver.py
docs/: DS.md  FS.md  URS.md
docs/validation/: ExperimentalTestMatrix_DO2_Outlet.md  RTM.md  RiskAssessment.md  TestProtocol.md  TestReport.md  ValidationPlan.md
tests/: test_exports.py  test_params.py  test_solver.py  test_ui_co2_stage_order.py
ui/: app.py
